--- a/_hwk/h02.md
+++ b/_hwk/h02.md
@@ -1,7 +1,7 @@
 ---
 num: "h02"
 desc: "Chapter 2.3-2.5"
-ready: false
+ready: true
 assigned: 2018-04-10 11:00:00.00-7:00
 due: 2018-04-17 11:00:00.00-7:00
 ---
