--- a/_pa/pa01.md
+++ b/_pa/pa01.md
@@ -31,7 +31,7 @@ cp ~/cs24/cs24-s18-starter-code/pa01/* ./
 
 Files to submit: stats.h, stats.cpp and a Makefile
 
-This assignment is based on Chapter 2, Programming Project 2 and 3 (here is a local copy of [page 90](Page-90.pdf). Follow the instructions on this web page, not the ones on page 90 - but do see the hints provided by the textbook author.
+This assignment is based on Chapter 2, Programming Project 2 and 3 (here is a local copy of [page 90](Page-90.pdf){: data-ajax="false"}. Follow the instructions on this web page, not the ones on page 90 - but do see the hints provided by the textbook author.
 
 1. Type your name and the date in a comment at the top.(Like always, whether or not we remind you!)
 
