--- a/_hwk/h03.md
+++ b/_hwk/h03.md
@@ -6,7 +6,7 @@ assigned: 2018-04-17 11:00:00.00-7:00
 due: 2018-04-24 11:00:00.00-7:00
 ---
 {% include no_staples_box.html %}
-Complete your reading of Chapter 3, section 3.1- 3.3   (If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
+Complete your reading of Chapter 3, section 3.1, Chapter 4, 4.1 - 4.5   (If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
 
 <ol markdown="1">
 1. (10 pts) What is the output of the following code:
