--- a/_hwk/h03.md
+++ b/_hwk/h03.md
@@ -1,7 +1,7 @@
 ---
 num: "h03"
 desc: "Chapter 3, section 3.1, Chapter 4, 4.1 - 4.5"
-ready: false
+ready: true
 assigned: 2018-04-17 11:00:00.00-7:00
 due: 2018-04-24 11:00:00.00-7:00
 ---
@@ -43,7 +43,7 @@ delete p;
 i. (5 pts) Suppose the parametrized constructor was implemented as below, identify the syntax/logic error and provide a correct implementation.
 <div markdown="1">
 ```
-pointCloud::pointCloud(int capacity = 10){
+pointCloud::pointCloud(int cap = 10){
 	cloud = new point[capacity];
 }
 ```
