--- a/_exam/e01.md
+++ b/_exam/e01.md
@@ -21,6 +21,7 @@ A fun way to prepare for the exam is to work with your classmates to create note
 
 [Click here to contribute to Collaborative Notes](https://docs.google.com/document/d/11GtHNlKiYh81QXVWifwsUiu3ub5Ump5XiaJyTunFgnM/edit?usp=sharing)
 
+[Review notes](https://docs.google.com/document/d/1geHT81CINv_vwXYlGj_EYl53KzZzMiDOr7v4-9CTjg4/edit?usp=sharing)
 
 ## Post exam information
 
