--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -15,7 +15,7 @@ due: 2018-05-11 23:59:00.00-7
 * If you have a partner, add you partner as a collaborator to the repo. Partner should accept the invitations to complete this process
 * Join a team on submit.cs
 * Get the starter code for this lab by doing a git pull in your starter-code repo and copying the files from the pa02 folder in this git repo:
-[https://github.com/ucsb-cs24-w18/cs24-w18-lab-starter-code](https://github.com/ucsb-cs24-w18/cs24-w18-lab-starter-code) 
+[https://github.com/ucsb-cs24-w18/cs24-w18-lab-starter-code](https://github.com/ucsb-cs24-w18/cs24-s18-lab-starter-code) 
 
 # Goal of this assignment
 
@@ -36,7 +36,7 @@ You have pointed out to Alice and Bob that this game is completely deterministic
 
 At the start of the program, you will read in Alice and Bob's starting hands from two files. The names of these files are provided as command line arguments with Alice's file in `argv[1]` and Bob's in `argv[2]`. The starter code opens the files for you as `ifstream` objects, which you can treat much like `cin`. You should read Alice and Bob's cards into two linked lists, making sure to maintain the order in the file, that is the first card in the file should be at the head of the list.
 
-Once you have the lists of cards, the game begins. Alice goes first and iterates over each card in her hand, checking whether Bob has that card. Once a matching card is found, you should print the line "Alice picked matching card <card suit as a character> <card value as a number/character>". The card should then be removed from both players hands. Make sure to delete any dynamically allocated memory when removing the cards from your lists!
+Once you have the lists of cards, the game begins. Alice goes first (Important! Alice's file is in `argv[1]`) and iterates over each card in her hand, checking whether Bob has that card. Once a matching card is found, you should print the line "Alice picked matching card <card suit as a character> <card value as a number/character>". The card should then be removed from both players hands. Make sure to delete any dynamically allocated memory when removing the cards from your lists!
 
 The process then repeats, except this time, Bob looks through his cards for the first one that Alice also has. Each player should begin their search where they left off in a previous round. Once there are no matching cards, you should print out the final hands of both players with the matching cards removed.
 
@@ -82,7 +82,7 @@ c 2
 d j
 ```
 
-Note: a=ace, k=king, q=queen, j=jack
+Note: 0=10, a=ace, k=king, q=queen, j=jack
 
 ## Requirements
 
@@ -91,7 +91,7 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 * You must use a linked list you implemented yourself to solve the problem, not another data structure or a linked list in the standard library.
 * Your solution must include at least one overloaded operator. This will probably be the operator on your Card class to check if two cards match i.e. they have the same suit and value.
 * Your linked list must implement a constructor, a de-constructor and other other methods as needed
-* You code should be readable
+* You code should be readable, which means reasonable comment and good formating like indentation.
 * Your classes should define clear interfaces and hide implementation details as much as possible. 
 * Your program must properly free all memory it allocates, including your linked list nodes and any dynamically allocated data stored inside them. We will also check this with valgrind when you turn in your code to submit.cs.
 
@@ -106,23 +106,15 @@ In addition you must create a Makefile that compiles your program to an executab
 
 You must submit exactly four files with the names: Makefile, main.cpp, cards.cpp, cards.h
 
-## Checkpoint deadline: 02/16 at midnight (20 points)
+## ??? Checkpoint deadline: 02/16 at midnight (20 points)
 
 Complete an initial design of your classes and push your code to github by the checkpoint deadline. For example if you decide to use two classes to create the card game you must provide the declarations of both classes in cards.h and describe the public interface of each class. You must also complete implementing the code that reads each player's cards from a file and stores it in a linked list as well as the code that prints each players hand. To get credit for the checkpoint your code must compile without error. This means that you must create stubs for any functions that you are yet to implement.
 
 Include the commit message "CHECKPOINT SUBMISSION" when pushing your code to github. 
 
-Submit PA4 at https://submit.cs.ucsb.edu/, or use the following command from a CS terminal:
-
-```
-~submit/submit -p 951 Makefile cards.cpp cards.h main.cpp
-```
-
-You should see a score of 60/60 
-
-The remaining 40 points are broken down as:
+Submit the files for PA2 on gradescope: main.cpp, cards.h, cards.cpp, Makefile. Be sure to wait for the results of all tests. If you score 60/60, and you’ve followed all of the other rules, then you’ll earn 60/60. The additional 40 points will be given by the mentor for good style and for showing off your initial design of the class
 
 * 20 pts for meeting the checkpoint requirements
 * 20 points for style and overall design following the guidelines in the requirements (above)
 
-Created by Jack Alexander and Diba Mirza
+Created by Jack Alexander, Jinjin Shao, and Diba Mirza
