--- a/_hwk/h04.md
+++ b/_hwk/h04.md
@@ -1,7 +1,7 @@
 ---
 num: "h04"
 desc: "Chapter 5, section 5.1 -5.4"
-ready: false
+ready: true
 assigned: 2018-04-24 11:00:00.00-7:00
 due: 2018-05-01 11:00:00.00-7:00
 ---
