--- a/_exam/e01.md
+++ b/_exam/e01.md
@@ -23,6 +23,10 @@ A fun way to prepare for the exam is to work with your classmates to create note
 
 [Review notes](https://docs.google.com/document/d/1geHT81CINv_vwXYlGj_EYl53KzZzMiDOr7v4-9CTjg4/edit?usp=sharing)
 
+## Homework Solutions
+
+[Solutions to hw 2-3](https://drive.google.com/drive/folders/1a8N5jMOx6_OTKwgYXjt4094fH6Cc0ReY?usp=sharing)
+
 ## Post exam information
 
 
