--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -84,18 +84,32 @@ d j
 
 Note: 0=10, a=ace, k=king, q=queen, j=jack
 
+
 ## Requirements
 
 For this lab, you will have a lot of flexibility on your implementation (which just means we won't be providing a code framework for you to fill in). However, there are a few requirements that your mentor will check for when they look at your code. Keep these in mind as you think about your solution:
 
-* You must use a linked list you implemented yourself to solve the problem, not another data structure or a linked list in the standard library.
+* You must use a linked list to store the sequence of cards for each player, not another data structure or a linked list in the standard library.
 * Your solution must include at least one overloaded operator. This will probably be the operator on your Card class to check if two cards match i.e. they have the same suit and value.
 * Your linked list must implement a constructor, a de-constructor and other other methods as needed
-* You code should be readable, which means reasonable comment and good formating like indentation.
-* Your classes should define clear interfaces and hide implementation details as much as possible. 
-* Your program must properly free all memory it allocates, including your linked list nodes and any dynamically allocated data stored inside them. We will also check this with valgrind when you turn in your code to submit.cs.
+* You must define clear interfaces (public functions for the linked-list), so that implementation details are hidden from the code that uses the linked-list
+* Your program must properly free all memory it allocates, including your linked list nodes and any dynamically allocated data stored inside them. You must run valgrind on your code and get a clean report
+* You code should be readable, which means reasonable comment and good formating like indentation. 
 
-* Extra credit: Appropriate use of recursion to write concise and elegant code without compromising on performance.
+* Star points: Appropriate use of recursion to write concise and elegant code without compromising on performance.
+
+## Approach
+
+* Spend time thinking through your design before implementing it.
+* Run your initial design by your mentor to get some initial feedback (as in pa01 this step is 20% of your grade)
+* Identify the objects in your game: card, hand (sequence of cards dealt to each player), player, etc
+* Create appropriate classes - to do this you have to identify the behaviors and attributes of the different objects in your game.
+* While you have flexibility in terms of designing your classes in general, we require that you represent each player'shand (aka list of cards) as a linked-list where each node stores a Card object instead of a simple integer value. In your design you may represent a Card as a class or as a struct. 
+* To design the class that represents the list of cards (let's call this CardList), think about how other parts of your program interact with this class. For example, in the algorithm for the game you have to repeated insert cards into your CardList, so your class should definitely have an insert method -- what should be the parameter to insert?
+* Here are some other ways a player may interact with their list of cards:
+- search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  
+
+
 
 # Submission instructions 
 
