--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -104,10 +104,13 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 * Run your initial design by your mentor to get some initial feedback (as in pa01 this step is 20% of your grade)
 * Identify the objects in your game: card, hand (sequence of cards dealt to each player), player, etc
 * Create appropriate classes - to do this you have to identify the behaviors and attributes of the different objects in your game.
-* While you have flexibility in terms of designing your classes in general, we require that you represent each player'shand (aka list of cards) as a linked-list where each node stores a Card object instead of a simple integer value. In your design you may represent a Card as a class or as a struct. 
-* To design the class that represents the list of cards (let's call this CardList), think about how other parts of your program interact with this class. For example, in the algorithm for the game you have to repeated insert cards into your CardList, so your class should definitely have an insert method -- what should be the parameter to insert?
+* While you have flexibility in terms of designing your classes in general, we require that you represent each player's hand (aka list of cards) as a linked-list where each node stores a Card object instead of a simple integer value. In your design you may represent a Card as a class or as a struct. 
+
+* To design the class that represents the list of cards (let's call this CardList), think about how other parts of your program interact with this class. For example, in the algorithm for the game you have to repeatedly insert cards into your CardList, so your class should definitely have an insert method -- what should be the parameter to insert?
+
 * Here are some other ways a player may interact with their list of cards:
-- search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  
+
+  - search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  
 
 
 
