--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -15,7 +15,7 @@ due: 2018-05-11 23:59:00.00-7
 * If you have a partner, add you partner as a collaborator to the repo. Partner should accept the invitations to complete this process
 * Join a team on submit.cs
 * Get the starter code for this lab by doing a git pull in your starter-code repo and copying the files from the pa02 folder in this git repo:
-[https://github.com/ucsb-cs24-w18/cs24-w18-lab-starter-code](https://github.com/ucsb-cs24-w18/cs24-s18-lab-starter-code) 
+[https://github.com/ucsb-cs24-s18/cs24-s18-starter-code.git](https://github.com/ucsb-cs24-w18/cs24-s18-lab-starter-code) 
 
 # Goal of this assignment
 
@@ -28,7 +28,7 @@ due: 2018-05-11 23:59:00.00-7
 
 ## The game
 
-Alice and Bob are playing a game a bit like Go Fish, although neither of them is very good at it. Rather than randomly guessing what card the other person has, they take turns to find a matching card. Each player goes through their list of cards in order and asks the other player to list all of their cards in order until a match is found. The game ends once they do not have any cards in common. Note that they do not draw any cards during this process.
+Alice and Bob are playing a game a bit like Go Fish, although neither of them is very good at it. Rather than randomly guessing what card the other person has, they take turns to find a matching card. Each player goes through their list of cards in order and asks the other player to list all of their cards in order until a match is found. The game ends once they do not have any cards in common. Note that they do not draw any new cards during this process.
 
 You have pointed out to Alice and Bob that this game is completely deterministic. They're not sure what you mean, so you decide to demonstrate by showing that a computer can predict how a game will play out. To do this, you'll be using a linked list!
 
@@ -90,9 +90,9 @@ Note: 0=10, a=ace, k=king, q=queen, j=jack
 For this lab, you will have a lot of flexibility on your implementation (which just means we won't be providing a code framework for you to fill in). However, there are a few requirements that your mentor will check for when they look at your code. Keep these in mind as you think about your solution:
 
 * You must use a linked list to store the sequence of cards for each player, not another data structure or a linked list in the standard library.
-* Your solution must include at least one overloaded operator. This will probably be the operator on your Card class to check if two cards match i.e. they have the same suit and value.
+* Your solution must include at least two overloaded operators. These will probably be the operator on your Card class to check if two cards match i.e. they have the same suit and value, and the operator on your Card class to output stream i.e. operator '<<' used in print statements like "std::cout << some_str". (Details on below)
 * Your linked list must implement a constructor, a de-constructor and other other methods as needed
-* You must define clear interfaces (public functions for the linked-list), so that implementation details are hidden from the code that uses the linked-list
+* You must define clear interfaces (public functions for the linked-list), so that implementation details are hidden from the code that uses the linked-list, which is the checkpoint for this assignment.
 * Your program must properly free all memory it allocates, including your linked list nodes and any dynamically allocated data stored inside them. You must run valgrind on your code and get a clean report
 * You code should be readable, which means reasonable comment and good formating like indentation. 
 
@@ -102,7 +102,8 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 
 * Spend time thinking through your design before implementing it.
 * Run your initial design by your mentor to get some initial feedback (as in pa01 this step is 20% of your grade)
-* Identify the objects in your game: card, hand (sequence of cards dealt to each player), player, etc
+* Identify the objects in your game as well as their behaviors (public functions): 
+ ** card, hand (a sequence, or a list, of cards dealt to each player), player, etc. The You might create less than or more than three classes, which is totally OK, as long as they are meanful and helpful.
 * Create appropriate classes - to do this you have to identify the behaviors and attributes of the different objects in your game.
 * While you have flexibility in terms of designing your classes in general, we require that you represent each player's hand (aka list of cards) as a linked-list where each node stores a Card object instead of a simple integer value. In your design you may represent a Card as a class or as a struct. 
 
@@ -111,6 +112,8 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 * Here are some other ways a player may interact with their list of cards:
 
   - search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  
+
+## Overload operator "<<"
 
 
 
