--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -103,7 +103,7 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 * Spend time thinking through your design before implementing it.
 * Run your initial design by your mentor to get some initial feedback (as in pa01 this step is 20% of your grade)
 * Identify the objects in your game as well as their behaviors (public functions): 
- ** card, hand (a sequence, or a list, of cards dealt to each player), player, etc. The You might create less than or more than three classes, which is totally OK, as long as they are meanful and helpful.
+ ..* card, hand (a sequence, or a list, of cards dealt to each player), player, etc. The You might create less than or more than three classes, which is totally OK, as long as they are meanful and helpful.
 * Create appropriate classes - to do this you have to identify the behaviors and attributes of the different objects in your game.
 * While you have flexibility in terms of designing your classes in general, we require that you represent each player's hand (aka list of cards) as a linked-list where each node stores a Card object instead of a simple integer value. In your design you may represent a Card as a class or as a struct. 
 
