--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -32,7 +32,7 @@ Alice and Bob are playing a game a bit like Go Fish, although neither of them is
 
 You have pointed out to Alice and Bob that this game is completely deterministic. They're not sure what you mean, so you decide to demonstrate by showing that a computer can predict how a game will play out. To do this, you'll be using a linked list!
 
-## Your approach
+## Approach Overview
 
 At the start of the program, you will read in Alice and Bob's starting hands from two files. The names of these files are provided as command line arguments with Alice's file in `argv[1]` and Bob's in `argv[2]`. The starter code opens the files for you as `ifstream` objects, which you can treat much like `cin`. You should read Alice and Bob's cards into two linked lists, making sure to maintain the order in the file, that is the first card in the file should be at the head of the list.
 
@@ -98,12 +98,15 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 
 * Star points: Appropriate use of recursion to write concise and elegant code without compromising on performance.
 
-## Approach
+## Detail Approach
 
 * Spend time thinking through your design before implementing it.
 * Run your initial design by your mentor to get some initial feedback (as in pa01 this step is 20% of your grade)
 * Identify the objects in your game as well as their behaviors (public functions): 
-  * card, hand (a sequence, or a list, of cards dealt to each player), player, etc. The You might create less than or more than three classes, which is totally OK, as long as they are meanful and helpful.
+  * card, which represents a specific card. (Think about node in linked list)
+  * hand, which represents a sequence, or a list, of cards dealt to each player. What does it do? i.e. It might let you know what the first card is. It can traverse all cards in this hand. It can tell if it contains a specific card. It can throw a card away given what that card is. 
+  * player, which represents a person who has a hand of cards! Can you let it have a name? 
+  * etc. You might create less than or more than three classes, which is totally OK, as long as they are meanful and helpful for object-oriented programming!
 * Create appropriate classes - to do this you have to identify the behaviors and attributes of the different objects in your game.
 * While you have flexibility in terms of designing your classes in general, we require that you represent each player's hand (aka list of cards) as a linked-list where each node stores a Card object instead of a simple integer value. In your design you may represent a Card as a class or as a struct. 
 
@@ -111,7 +114,8 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 
 * Here are some other ways a player may interact with their list of cards:
 
-  - search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  
+  - search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  So Bob, at this moment, should call a function to search this card (h 3) in his list of cards. Obiviously, (h 3) is not in Bob's list. So Alice goes to the next card (s 2) and let Bob search for (s 2). Still failed. ... (many failures here) Until Alice lets Bob search for (c 3), Bob finds it!
+  - delete: Obiviously, Alice and Bob should throw their (c 3) away. Both of them should call a function to delete the card (c 3) in their lists of cards -- what should be the parameter to delete?
 
 ## Overload operator "<<"
 
