--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -119,7 +119,51 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 
 ## Overload operator "<<"
 
+Overload operator "<<" is a useful feature in C++. It enables objects of various classes to customize their stream extraction behavior. ("<<" is for output. ">>" is for input with similar usage but not discussed here.)
+To specificly illuatrate how to overload operator "<<", here is one example.
 
+```
+#include <iostream> // including std::ostream
+#include <string>
+
+class Person {
+ public:
+  Person() { name = "I have no name"; }
+  
+  void setName(std::string hereisyourname) { name = hereisyourname; }
+  
+  friend std::ostream& operator<< (std::ostream& os, const Person& random) {
+      os << "My name is: " << random.name;
+      return os; // !!!!! Don't forget this return !!!!!
+  }
+  
+ private:
+  std::string name;
+};
+
+int main()
+{
+  Person random;
+  
+  std::cout << random << std::endl;
+  
+  random.setName("Barbara");
+  
+  std::cout << random << std::endl;
+}
+```
+
+A class Person is defined, and it has a overload "<<" function as a friend non-member function.
+Inside this operator function, people can freely specify what information would be printed out when operator "<<" is applied to this class, Person. Here we want it to print its name. 
+
+With this overload function, we can directly use it on Person like how we print those built-in data types i.e. int, double.
+
+Here is the output. 
+
+```
+My name is: I have no name
+My name is: Barbara
+```
 
 # Submission instructions 
 
