--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -119,8 +119,8 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 
 ## Overload operator "<<"
 
-Overload operator "<<" is a useful feature in C++. It enables objects of various classes to customize their stream extraction behavior. ("<<" is for output. ">>" is for input with similar usage but not discussed here.)
-To specificly illuatrate how to overload operator "<<", here is one example.
+Overloading operator "<<" is a useful feature in C++. It enables objects of various classes to customize their stream extraction behavior. ("<<" is for output. ">>" is for input with similar usage but not discussed here.)
+To specificly illuatrate how to overload operator "<<", here is an example.
 
 ```
 #include <iostream> // including std::ostream
@@ -153,10 +153,10 @@ int main()
 }
 ```
 
-A class Person is defined, and it has a overload "<<" function as a friend non-member function.
-Inside this operator function, people can freely specify what information would be printed out when operator "<<" is applied to this class, Person. Here we want it to print its name. 
+A class Person is defined, and it has an overload insertion "<<" function as a friend non-member function.
+Inside this overloading function, people can freely specify what information would be printed out when operator "<<" is applied to this class, Person. Here we want it to print its name. 
 
-With this overload function, we can directly use it on Person like how we print those built-in data types i.e. int, double.
+With overloading function, we can directly print Person like how we print those built-in data types i.e. int, double.
 
 Here is the output. 
 
