--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -114,8 +114,9 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 
 * Here are some other ways a player may interact with their list of cards:
 
-  - search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  So Bob, at this moment, should call a function to search this card (h 3) in his list of cards. Obiviously, (h 3) is not in Bob's list. So Alice goes to the next card (s 2) and let Bob search for (s 2). Still failed. ... (many failures here) Until Alice lets Bob search for (c 3), Bob finds it!
-  - delete: Obiviously, Alice and Bob should throw their (c 3) away. Both of them should call a function to delete the card (c 3) in their lists of cards -- what should be the parameter to delete?
+  - search: Let's say Alice starts the game - one of the first things she needs to do is to check if her first card (h 3) is in Bob's card list.  So Bob, at this moment, should call a function to search this card (h 3) in his list of cards. Obiviously, (h 3) is not in Bob's list. So Alice goes to her next card (s 2) and asks Bob to search for (s 2). Still failed. ... (many failures here) until Alice asks Bob to search for (c 3), Bob finds it! The main point here is that your cardlist class should implement a search function, and any player should be able to 'ask' another player to find a matching card by calling some appropriate method of a class.
+  - delete: Once Alice and Bob have found a matching card (in this case (c 3)), they  should throw their (c 3) cards away. Both of them should call a 'delete' function to delete the card (c 3) in their lists of cards -- what should be the parameter to the delete function, what should be the return value?
+ 
 
 ## Overload operator "<<"
 
@@ -174,7 +175,7 @@ In addition you must create a Makefile that compiles your program to an executab
 
 You must submit exactly four files with the names: Makefile, main.cpp, cards.cpp, cards.h
 
-## ??? Checkpoint deadline: 02/16 at midnight (20 points)
+## Checkpoint deadline: 05/03 at midnight (20 points)
 
 Complete an initial design of your classes and push your code to github by the checkpoint deadline. For example if you decide to use two classes to create the card game you must provide the declarations of both classes in cards.h and describe the public interface of each class. You must also complete implementing the code that reads each player's cards from a file and stores it in a linked list as well as the code that prints each players hand. To get credit for the checkpoint your code must compile without error. This means that you must create stubs for any functions that you are yet to implement.
 
