--- a/_pa/pa02.md
+++ b/_pa/pa02.md
@@ -1,7 +1,7 @@
 ---
 layout: pa
 num: pa02
-ready: false
+ready: true
 desc: "Linked-list implementation of a card game"
 assigned: 2018-04-26 09:00:00.00-7
 due: 2018-05-11 23:59:00.00-7
