Update and rename h05-new.md to h05.md

--- a/_hwk/h05.md
+++ b/_hwk/h05.md
@@ -1,6 +1,6 @@
 ---
 num: "h05"
-desc: "Chapter 9: Recursive Thinking"
+desc: "Chapter 9: Recursion"
 ready: true
 assigned: 2018-05-08 11:00:00.00-7:00
 due: 2018-05-15 11:00:00.00-7:00
