--- a/_hwk/h05.md
+++ b/_hwk/h05.md
@@ -37,19 +37,19 @@ class LinkedList{
 ```
 </div>
 
-Write the definition of a helper function in the class provided above that recursively reverses the order of elements in the linked list. This function will be used by the reverse() method. The implementation of the function should be provided on the next page.
+Write the declaration of a helper function in the class provided above that recursively reverses the order of elements in the linked list. This function will be used by the reverse() method. The implementation of the function should be provided on the next page.
 <div style="margin-bottom:2em"></div>
 
 
 <div class="pagebreak"></div>
 
 
-3. (10 pts) Consider the doubly linked list in the previous question. Implement the reverse method that uses a helper function to recursively reverse the order of elements in a linked list. You must implement the helper function as well.
+3. (20 pts) Consider the doubly linked list in the previous question. Implement the reverse method that uses a helper function to recursively reverse the order of elements in a linked list. You must implement the helper function as well.
 
 <div style="margin-bottom:50em"></div>
 
 
-4. (5 pts) Write a recursive function that finds the sum of the first 'n' odd positive integers. 
+4. (10 pts) Write a recursive function that finds the sum of the first 'n' odd positive integers. 
 <div style="margin-bottom:4em"></div>
 
 
