--- a/_hwk/h06.md
+++ b/_hwk/h06.md
@@ -1,23 +1,56 @@
 ---
 num: "h06"
-desc: "Chapter 6, sections 6.1-6.6"
-ready: false
+desc: "Chapter 1"
+ready: true
 assigned: 2018-05-08 11:00:00.00-7:00
 due: 2018-05-15 11:00:00.00-7:00
 ---
 {% include no_staples_box.html %}
-Complete your reading of Chapter 6, section 6.1 -6.2, 6.3 (ignore references to multiset of page 139), 6.4-6.6   (If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
+Complete your reading of Chapter 1. If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
 
 <ol markdown="1">
+1. (10 pts) What is the Big-O time complexity of the following code:
 
-1. (10 pts) Write a template function named IsEqual() that compares two items and returns a boolean. If the items are equal the function should return true otherwise it should return false. The function has two parameters of the same type. The type may be any type that has a copy constructor and the == operator defined.
-<div style="margin-bottom:12em"></div>
+<div markdown="1">
 
-2. (10 pts) Re-read pages 314-315. Then consider the Sequence class provided <a href= "https://github.com/ucsb-cs24-w18/hw5/blob/master/sequence.h">in this file </a>. The Sequence class currently stores a list of words in a static array. Convert this class to a template class that can be used to store a collection of any datatype instead of just std::string. Write the new definition of the Sequence class below. You don't have to implement the methods.
-<div style="margin-bottom:10em"></div>
+```
+for(int i=0; i<N; i+=2) {
+	...constant time operations...
+}
+```
+</div>
+Justify your answer.
+<div style="margin-bottom:5em"></div>
 
+2. (10 pts) What is the Big-O time complexity of the following code:
 
+<div markdown="1">
+```
+for(int i=0; i<N; i*=2) {
+	...constant time operations...
+}
+```
+</div>
+Justify your answer.
+<div style="margin-bottom:5em"></div>
+
+3. (20 pts) What is the Big-O time complexity of the following code: 
+
+<div markdown="1">
+
+```
+int x = 10;
+for(int i=0; i<N; i*=2) {
+	for(int i=0; i<N; i+=2) {
+		x++;
+	}
+}
+```
+</div>
+<div style="margin-bottom:8em"></div>
 <div class="pagebreak"></div>
+
+4. (10 pts) Provide a link to your github repo for pa02. Analyze the Big-O complexity of the insert, delete and search methods of your implementation of the CardList (linked list class). Assume that Alice and Bob each have exactly N cards. Provide your analysis here. As a challenge problem, analyze the Big-O complexity of your entire game.
 
 
 </ol>
