--- a/_hwk/h06.md
+++ b/_hwk/h06.md
@@ -1,12 +1,12 @@
 ---
 num: "h06"
-desc: "Chapter 1"
+desc: "Chapter 1: Runing Time Analysis"
 ready: true
 assigned: 2018-05-08 11:00:00.00-7:00
 due: 2018-05-15 11:00:00.00-7:00
 ---
 {% include no_staples_box.html %}
-Complete your reading of Chapter 1. If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
+Complete your reading of Chapter 1, Section 1.2. If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
 
 <ol markdown="1">
 1. (10 pts) What is the Big-O time complexity of the following code:
