--- a/_hwk/h06.md
+++ b/_hwk/h06.md
@@ -26,7 +26,7 @@ Justify your answer.
 
 <div markdown="1">
 ```
-for(int i=0; i<N; i*=2) {
+for(int i=1; i<N; i*=2) {
 	...constant time operations...
 }
 ```
@@ -40,8 +40,8 @@ Justify your answer.
 
 ```
 int x = 10;
-for(int i=0; i<N; i*=2) {
-	for(int i=0; i<N; i+=2) {
+for(int i=1; i<N; i*=2) {
+	for(int j=0; j<N; j+=2) {
 		x++;
 	}
 }
