--- a/_exam/e02.md
+++ b/_exam/e02.md
@@ -29,9 +29,9 @@ A fun way to prepare for the exam is to work with your classmates to create note
 ## Reference material
 You are expected to know the material from the following lectures, labs and homeworks:
 
-* Lecture 1 to lecture 8 , including all code implemented in class
-* Homework 1 to 4
-* Labs 0 to 3
+* Lecture 1 to lecture 12 , including all code implemented in class
+* Homework 1 to 6
+* Labs 0 to 5
 * pa01 and pa02 
 
 # Study guide
@@ -47,7 +47,9 @@ You are expected to know the material from the following lectures, labs and home
 * The big 4 for linked-lists - why and how to overload the c'tor, de-stor, copy-c'tor and copy assignment
 * Run time analysis -- Big-Oh 
 * Deriving Big-Oh for code that involves loops
-* Analyzing the run times of operations supported by linked lists and sorted arrays - insert, search, delete, min, max
+* Binary Search Trees - Implementing all operatons and derivations of running times.
+* Binary Search Trees - Implementing overloaded operators, and the big 4.
+* Analyzing the run times of operations supported by linked lists, sorted arrays ans binary search trees- insert, search, delete, min, max
 
 
 # Past exams
