--- a/_exam/e02.md
+++ b/_exam/e02.md
@@ -41,13 +41,13 @@ You are expected to know the material from the following lectures, labs and home
 * Understanding how to create instances of a class on the stack and heap
 * Member functions, non-member functions and friend functions - why and how 
 * Operator overloading - why and how
-* The big 4- Constructor, de-constructor, copy-constructor, assignment operator (default behavior, overloaded implementation and identifying when each is invoked in any given code)
+* The big 4- Constructor, destructor, copy-constructor, assignment operator (default behavior, overloaded implementation and identifying when each is invoked in any given code)
 * Linked-lists - you may be asked to implement any function that involves a linked list
 * Recursive implementations involving linked-lists
 * The big 4 for linked-lists - why and how to overload the c'tor, de-stor, copy-c'tor and copy assignment
 * Run time analysis -- Big-Oh 
 * Deriving Big-Oh for code that involves loops
-* Binary Search Trees - Implementing all operatons and derivations of running times.
+* Binary Search Trees - Implementing all operations and derivations of running times.
 * Binary Search Trees - Implementing overloaded operators, and the big 4.
 * Analyzing the run times of operations supported by linked lists, sorted arrays ans binary search trees- insert, search, delete, min, max
 
