--- a/_hwk/h07.md
+++ b/_hwk/h07.md
@@ -1,7 +1,7 @@
 ---
 num: "h07"
 desc: "Chapter 6, sections 6.1-6.6"
-ready: false
+ready: true
 assigned: 2018-05-15 11:00:00.00-7:00
 due: 2018-05-22 11:00:00.00-7:00
 ---
