--- a/_exam/e02.md
+++ b/_exam/e02.md
@@ -54,7 +54,12 @@ You are expected to know the material from the following lectures, labs and home
 
 # Past exams
 
-Link to the past exam is available on gauchospace.
+
+Midterm-1 questions are available at: [http://bit.ly/CS24-S18-Midterm-I-questions](http://bit.ly/CS24-S18-Midterm-I-questions)
+
+Midterm-1 solutions are available at: [http://bit.ly/CS24-S18-Midterm-I-Solutions](http://bit.ly/CS24-S18-Midterm-I-questions)
+
+Past exams have been posted on gauchospace.
 
 # Review notes
 [Link to the review notes](CS24_midterm1_review.md){:data-ajax="false"}
