--- a/_pa/pa03.md
+++ b/_pa/pa03.md
@@ -9,10 +9,9 @@ due: 2018-06-08 23:59:00.00-7
 
 # Introduction
 
-* Create a github repo following the correct naming convention.
+* Create a GitHub repo following the correct naming convention.
 * If you have a partner, add you partner as a collaborator to the repo. Partner should accept the invitations to complete this process
-* Join a team on submit.cs
-* No starter code is provided for this lab
+* Minimal starter code is provided for this lab, but be sure to grab it from GitHub
 
 # Goal of this assignment
 
@@ -27,15 +26,15 @@ due: 2018-06-08 23:59:00.00-7
 
 The game you will be implementing is exactly the same as the one you did for pa02, the key differences are:
 * you will implement and use a binary search tree instead of a linked list
-* you will organize your code in a slightly different directory structure
+* as a result, the ordering in which cards are picked will be different
 
 # Required files
 
-* cards.cpp, cards.h    // These files should contain  your implementation of the binary search tree to stror a list of cards
+* cards.cpp, cards.h    // These files should contain your implementation of the binary search tree to store a list of cards
 * ultility.cpp, ultility.h // These files should contain any other classes that you need to implement your game,
 * tests.cpp // These files should contain test code for all the classes and methods you used in your game
 * main.cpp // This file should read in the cards of the two players from input files and put everything together to play the game.
-* Makefile // generate two execuatables- the first should be called game and behaves exactly as the one in pa02, the second should be called tests and must run all the test code to unit test your classes and methods 
+* Makefile // generate two executables- the first should be called game and behaves similarly to the one in pa02, the second should be called tests and must RUN (not just compile) all the test code to unit test your classes and methods 
 
 
 ## The game
