--- a/_pa/pa03.md
+++ b/_pa/pa03.md
@@ -74,7 +74,14 @@ As before, you should write your own Makefile for this lab so that running `make
 
 ## Before you begin
 
-Based on pa02, we are adding an additional requirement that you write a set of unit tests for your binary search tree. These should be in a file called `tests.cpp`, which you will submit, and you should write your Makefile so that running `make test` compiles and runs these tests. Note that there will be no submit.cs tests for these unit tests, so you can have the output in whatever format you find most helpful. You should test each of the functions on your binary search tree, which will include, at the very least, `find()`, `delete()`, `insert()`, `successor()`, and `predecessor()`. We recommend writing these tests BEFORE you begin implementing the full game to ensure that your binary search tree works correctly. Debugging one set of code is much easier than debugging two at the same time. This will also ensure that your are correctly separating your binary tree class from the rest of your program logic.
+Based on pa02, we are adding an additional requirement that you write a set of unit tests for your binary search tree. These should be in a file called `tests.cpp`, which you will submit, and you should write your Makefile so that running `make test` compiles and runs these tests. Note that there will be no submit.cs tests for these unit tests, so you can have the output in whatever format you find most helpful. You should test each of the functions on your binary search tree, which will include, at the very least, `find()`, `delete()`, `insert()`, `successor()`, and `predecessor()`. You should write these tests BEFORE implementing the full game to ensure that your binary search tree works correctly. Debugging one set of code is much easier than debugging two at the same time. This will also ensure that your are correctly separating your binary tree class from the rest of your program logic.
+
+## Checkpoint
+
+As with pa02, there will be a checkpoint for this lab worth 20 points and due May 30th. For this checkpoint, you should be able to show your mentor:
+
+* Full skeleton code for your data structures--binary search tree, node, and any others you are using--THAT COMPILE (having stub functions is okay).
+* A set of tests in tests.cpp that you will run once you finish your BST to confirm that it works. These should also compile and should test all the functions of your BST.
 
 ## Example
 
@@ -132,17 +139,6 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 * You do not need to worry about having multiple instances of the same card. Each card will appear only once per hand.
 
 # Submission instructions 
-Submit your code using the following command
+Submit your code on Gradescope. You must organize your program in the files: main.cpp, cards.cpp, tests.cpp, cards.h, utility.cpp and utility.h
 
-```
-~submit/submit -p 968 Makefile cards.cpp cards.h main.cpp tests.cpp utility.cpp utility.h
-```
-
-You should also commit and push your code to github.
-
-## Files to submit
-
-You must organize your program in the files: main.cpp, cards.cpp, tests.cpp, cards.h, utility.cpp and utility.h
-In addition you must create a Makefile that compiles your program to an executable called `game`
-You can use the utility.cpp and .h to organize any additional classes.
-
+In addition you must create a Makefile that compiles your program to an executable called `game`.
