--- a/_pa/pa03.md
+++ b/_pa/pa03.md
@@ -49,7 +49,7 @@ The ordering of cards is described in the next section.
 
 The ordering of cards is determined first by its suit and then by the value:  
 
-1. The ordering least to greatest is: clubs, diamonds, spades, hearts. This a club of any value is less than a diamond of any value
+1. The ordering least to greatest is: clubs, diamonds, spades, hearts. Thus a club of any value is less than a diamond of any value.
 
 2. The ordering within each suit is determined by the value from least to greatest as follows: 
 ace, 2, 3, . . . 10, jack, queen, king. 
