--- a/_pa/pa03.md
+++ b/_pa/pa03.md
@@ -68,7 +68,7 @@ At the start of the program, you will read in Alice and Bob's starting hands fro
 
 Once you have the sets of cards, the game begins. Alice iterates forward through her binary tree (in increasing order of the cards), checking whether Bob has that card. You should check if Bob has each card using the search function of the BST. Once a matching card is found, you should print the line "Alice picked matching card <card suit as a character> <card value as a number/character>". The card should then be removed from both players hands by calling delete on the binary search tree. Make sure to delete any dynamically allocated memory when removing the cards from your trees!
 
-The process then repeats, except this time, Bob looks through his cards starting with largest card and working towards the smallest card. This means that while the first card Alice finds should be the first shared card (in order), the first card Bob finds should be the last shared card (in order). Once there are no matching cards, you should print out the final hands of both players with the matching cards removed.
+The process then repeats, except this time, Bob looks through his cards starting with the largest card and working towards the smallest card. This means that while the first card Alice finds should be the first shared card (in order), the first card Bob finds should be the last shared card (in order). Once there are no matching cards, you should print out the final hands of both players with the matching cards removed.
 
 As before, you should write your own Makefile for this lab so that running `make` builds an executable called `game`.
 
