--- a/_pa/pa03.md
+++ b/_pa/pa03.md
@@ -74,7 +74,7 @@ As before, you should write your own Makefile for this lab so that running `make
 
 ## Before you begin
 
-Based on pa02, we are adding an additional requirement that you write a set of unit tests for your binary search tree. These should be in a file called `tests.cpp`, which you will submit, and you should write your Makefile so that running `make test` compiles and runs these tests. Note that there will be no submit.cs tests for these unit tests, so you can have the output in whatever format you find most helpful. You should test each of the functions on your binary search tree, which will include, at the very least, `find()`, `delete()`, `insert()`, `successor()`, and `predecessor()`. You should write these tests BEFORE implementing the full game to ensure that your binary search tree works correctly. Debugging one set of code is much easier than debugging two at the same time. This will also ensure that your are correctly separating your binary tree class from the rest of your program logic.
+Based on pa02, we are adding an additional requirement that you write a set of unit tests for your binary search tree. These should be in a file called `tests.cpp`, which you will submit, and you should write your Makefile so that running `make test` compiles and runs these tests. Note that there will be no Gradescope tests for these unit tests, so you can have the output in whatever format you find most helpful. You should test each of the functions on your binary search tree, which will include, at the very least, `find()`, `delete()`, `insert()`, `successor()`, and `predecessor()`. You should write these tests BEFORE implementing the full game to ensure that your binary search tree works correctly. Debugging one set of code is much easier than debugging two at the same time. This will also ensure that your are correctly separating your binary tree class from the rest of your program logic.
 
 ## Checkpoint
 
@@ -135,7 +135,7 @@ For this lab, you will have a lot of flexibility on your implementation (which j
 * Your binary search tree must implement a constructor, a destructor and other other methods as needed
 * You code should be readable
 * Your classes should define clear interfaces and hide implementation details as much as possible. 
-* Your program must properly free all memory it allocates, including your binary tree nodes and any dynamically allocated data stored inside them. We will also check this with valgrind when you turn in your code to submit.cs.
+* Your program must properly free all memory it allocates, including your binary tree nodes and any dynamically allocated data stored inside them. We will also check this with valgrind when you turn in your code to Gradescope.
 * You do not need to worry about having multiple instances of the same card. Each card will appear only once per hand.
 
 # Submission instructions 
