--- a/_pa/pa03.md
+++ b/_pa/pa03.md
@@ -1,7 +1,7 @@
 ---
 layout: pa
 num: pa03
-ready: false
+ready: true
 desc: "Card game using Binary Search Trees"
 assigned: 2018-05-17 09:00:00.00-7
 due: 2018-06-08 23:59:00.00-7
