--- a/_hwk/h08.md
+++ b/_hwk/h08.md
@@ -1,7 +1,7 @@
 ---
 num: "h08"
 desc: "Chapter 10: Trees"
-ready: false
+ready: true
 assigned: 2018-05-22 11:00:00.00-7:00
 due: 2018-05-29 11:00:00.00-7:00
 ---
@@ -24,13 +24,13 @@ Read Chpater 10  (If you don't have a copy of the textbook yet, there is one on 
 <div style="margin-bottom:40em"></div>
 
 
-4. (5 pts) Why is it bad to insert nodes from smallest to largest in a binary search tree?
+4. (2 pts) Why is it bad to insert nodes from smallest to largest in a binary search tree?
 <div style="margin-bottom:4em"></div>
 
-5. (5 pts) Build a binary search tree with the following words (inserted in order): Kenya, Austria, Ireland, Norway, Laos, Germany, Moldova
+5. (5 pts) Build a binary search tree with the following words (inserted in the provided order): Kenya, Austria, Ireland, Norway, Laos, Germany, Moldova
 <div style="margin-bottom:16em"></div>
 
-6. (5 pts) How many comparisons are needed to search for these words in the BST that you created in the previous question: Ireland, Germany, Moldova
-<div style="margin-bottom:4em"></div>
+6. (3 pts) Search for the following keys in the BST that you created in the previous question: Ireland, Germany, Moldova
+and in each case indicate the nodes that you visited along the way. <div style="margin-bottom:4em"></div>
 
 </ol>
