--- a/_hwk/h09.md
+++ b/_hwk/h09.md
@@ -1,7 +1,7 @@
 ---
 num: "h09"
 desc: "Heaps: Chapter 11.1 and 11.2"
-ready: false
+ready: true
 assigned: 2018-05-29 11:00:00.00-7:00
 due: 2018-06-05 11:00:00.00-7:00
 ---
