--- a/_hwk/h09.md
+++ b/_hwk/h09.md
@@ -10,18 +10,18 @@ Please read chapters 11.1 and 11.2 of the book on Heaps and Priorty Queues
 (If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
 
 
-1. (10 pts) Contrast a heap with a binary search tree by inserting the numbers 60, 30, 40, 50, 20, 10 first in a BST and then in a min-heap. Draw the resulting BST on the left and the heap on the right. You may draw anycalid BST or Heap that contain the provided values
+1. (10 pts) Contrast a heap with a binary search tree by inserting the numbers 60, 30, 40, 50, 20, 10 first in a BST and then in a min-heap. Draw the resulting BST on the left and the heap on the right. You may draw any valid BST or Heap that contain the provided values.
 
 <div style="margin-bottom:12em"></div>
 
-2. (10 pts) In section 11.1, the book mentions that heaps are complete binary trees, what does that mean? Demonstrate by drawing an example of a binary tree with 5 nodes that is not complete and one that is complete.
+2. (10 pts) In section 11.1, the book mentions that heaps are **complete** binary trees, what does that mean? Demonstrate by drawing an example of a binary tree with 5 nodes that is not complete and one that is complete.
 <div style="margin-bottom:10em"></div>
 
 
 <div class="pagebreak"></div>
 
 
-3. (5 pts) Section 11.1 mentions that complete binary trees can be implemented using arrays. Provide the array representation of the heap that you constructed in Q1 as a result of inserting the numbers:  60, 30, 40, 50, 20, 10 
+3. (5 pts) Section 11.1 mentions that complete binary trees can be implemented using arrays. Provide the array representation of the heap that you constructed in Q1 containing the key values:  60, 30, 40, 50, 20, 10 
 <div style="margin-bottom:40em"></div>
 
 
@@ -29,10 +29,10 @@ Please read chapters 11.1 and 11.2 of the book on Heaps and Priorty Queues
 <div style="margin-bottom:10em"></div>
 
 
-5. (10 pts) Starting with the heap from Q3, delete the value 10 from the heap. Show how the original binary heap tree is modified on a deleting. Show also how the array representation of the heap is modfied when deleting the value
+5. (10 pts) Starting with the heap from Q3, delete the value 10 from the heap. Show how the original binary heap tree is modified on a deleting. Show also how the array representation of the heap is modfied when deleting the value.
 <div style="margin-bottom:10em"></div>
 
-6. (10 pts) Compare the Big -O running time of min, max , insert, delete and search for the following data structures: sorted array, generic BST, balanced BST, min-Heap, linked-list (unsorted)
+6. (10 pts) Compare the Big -O running time of min, max, insert, delete and search for the following data structures: sorted array, generic BST, balanced BST, min-Heap, linked-list (unsorted)
 <div style="margin-bottom:10em"></div>
 
 
