--- a/_hwk/h09.md
+++ b/_hwk/h09.md
@@ -9,6 +9,7 @@ due: 2018-06-05 11:00:00.00-7:00
 Please read chapters 11.1 and 11.2 of the book on Heaps and Priorty Queues
 (If you don't have a copy of the textbook yet, there is one on reserve at the library under "COMP000-STAFF - Permanent Reserve").
 
+<ol markdown="1">
 
 1. (10 pts) Contrast a heap with a binary search tree by inserting the numbers 60, 30, 40, 50, 20, 10 first in a BST and then in a min-heap. Draw the resulting BST on the left and the heap on the right. You may draw any valid BST or Heap that contain the provided values.
 
