--- a/_hwk/h09.md
+++ b/_hwk/h09.md
@@ -33,7 +33,7 @@ Please read chapters 11.1 and 11.2 of the book on Heaps and Priorty Queues
 5. (10 pts) Starting with the heap from Q3, delete the value 10 from the heap. Show how the original binary heap tree is modified on a deleting. Show also how the array representation of the heap is modfied when deleting the value.
 <div style="margin-bottom:10em"></div>
 
-6. (10 pts) Compare the Big -O running time of min, max, insert, delete and search for the following data structures: sorted array, generic BST, balanced BST, min-Heap, linked-list (unsorted)
+6. (10 pts) Compare the Big -O running time of min, max, insert, delete and search for the following data structures: sorted array, generic BST, balanced BST, min-Heap, linked-list (unsorted), stack and queue
 <div style="margin-bottom:10em"></div>
 
 
