--- a/_pa/pa03.md
+++ b/_pa/pa03.md
@@ -78,7 +78,7 @@ Based on pa02, we are adding an additional requirement that you write a set of u
 
 ## Checkpoint
 
-As with pa02, there will be a checkpoint for this lab worth 20 points and due May 30th. You will submit some code to Gradescope (the assignment pa03-checkpoint) for this checkpoint. Gradescope will check that your code compiles, and your mentor will also provide feedback on your code. Before submitting the checkpoint, you should have the following:
+As with pa02, there will be a checkpoint for this lab worth 20 points and due May 31st(Thursday) at midnight. You will submit some code to Gradescope (the assignment pa03-checkpoint) for this checkpoint. Gradescope will check that your code compiles, and your mentor will also provide feedback on your code. Before submitting the checkpoint, you should have the following:
 
 * Full skeleton code for your data structures--binary search tree, node, and any others you are using--THAT COMPILE (having stub functions is okay).
 * A set of tests in tests.cpp that you will run once you finish your BST to confirm that it works. These should also compile and should test all the functions of your BST.
