--- a/_exam/e03.md
+++ b/_exam/e03.md
@@ -24,8 +24,11 @@ Please sit in the exam hall according to this [seating chart](https://goo.gl/yDF
 
 ## Exam topics
 
-All content covered before midterm 1, see [https://ucsb-cs24-w18.github.io/exam/e01/](https://ucsb-cs24-w18.github.io/exam/e01/)
-Emphasis will be placed on topics post midterm 1
+Topics for midterms 1 and 2, see
+* [https://ucsb-cs24-s18.github.io/exam/e01/](https://ucsb-cs24-w18.github.io/exam/e01/)
+* [https://ucsb-cs24-s18.github.io/exam/e02/](https://ucsb-cs24-w18.github.io/exam/e02/)
+
+Emphasis will be placed on the following topics
 - Binary Search Trees
 - Stacks 
 - Queues
@@ -39,12 +42,9 @@ Emphasis will be placed on topics post midterm 1
 
 All the homeworks , labs and pas
 
- 
 
 ## Past exams
-
+* [W18 Final exam](https://docs.google.com/document/d/1WnRMez9RvgAu12A3R5JxqSiWF9SmG5jzKMV2MiKCjXU/edit?usp=sharing)
 * [W18 Midterm exam](https://goo.gl/L95NxV)
 * [SP 17 Final exam](https://docs.google.com/document/d/1MZFN-3tx3CkxelwDl34Ci6o2QgsVCdZC0XitrTLuG_s/edit?usp=sharing)
-* [SP 17 Final exam solutions](https://docs.google.com/document/d/1a8m2St1_WnsSfnhX2Hu2cCdaXSEHF5lBGYFBNBEq6OQ/edit?usp=sharing)
-
-Q10 on the exam involves iterators and will not be on the exam.
+* [SP 17 Final exam solutions](https://docs.google.com/document/d/1a8m2St1_WnsSfnhX2Hu2cCdaXSEHF5lBGYFBNBEq6OQ/edit?usp=sharing), Note Q10 involves iterators and will not be on the exam.
