--- a/_exam/e03.md
+++ b/_exam/e03.md
@@ -11,7 +11,11 @@ exam_date: 2018-06-13 8:00:00.00-7
 
 ## Seating arrangement
 
-Please sit in the exam hall according to this [seating chart](https://goo.gl/yDFku8)
+Please sit in the exam hall according to this [seating chart](https://docs.google.com/spreadsheets/d/1NiFcnI_Z2TysxyeEj-CEqcuMWNMVK4HGCsPqqq_mA6c/edit?usp=sharing)
+
+[Layout of the room is available here]( https://docs.google.com/spreadsheets/d/1l535GLch-bgCvJzJhqoUCXuheXXaxd1tkGq2cLJPEOU/edit?usp=sharing)
+
+If you would like to request a left handed or right handed seat, please contact the instructor.
 
 ## Instructions for the exam
 
